[package]
name = "movie_review"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.12"
borsh = { version = "1.3.0", features = ["derive"] }
thiserror = "1.0.52"
spl-token = { version="~3.3.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="=1.0.5", features = [ "no-entrypoint" ] }